// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagInput should renders correctly 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-h4to4s-TagInputContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  background-color: #ffffff;
  padding: calc(12px - 1px) 16px;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-h4to4s-TagInputContainer:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-h4to4s-TagInputContainer[data-success='true'] {
  border-color: #22674e;
}

.css-h4to4s-TagInputContainer[data-error='true'] {
  border-color: #b3144d;
}

.css-h4to4s-TagInputContainer:hover {
  border-color: #792dd4;
}

.css-h4to4s-TagInputContainer[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.css-h4to4s-TagInputContainer[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.css-bi6n77-DataContainer {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-45doph-StyledInput {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 16px;
  background: inherit;
  color: #3f4250;
  border: none;
  outline: none;
  height: 100%;
}

.css-45doph-StyledInput::-webkit-input-placeholder {
  color: #727683;
}

.css-45doph-StyledInput::-moz-placeholder {
  color: #727683;
}

.css-45doph-StyledInput:-ms-input-placeholder {
  color: #727683;
}

.css-45doph-StyledInput::placeholder {
  color: #727683;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div>
      <div
        class="css-h4to4s-TagInputContainer ea7vc6o3"
        data-disabled="false"
        data-error="false"
        data-readonly="false"
        data-success="false"
      >
        <div
          class="css-bi6n77-DataContainer ea7vc6o2"
        >
          <input
            class="css-45doph-StyledInput ea7vc6o0"
            id=":r0:"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagInput should renders correctly disabled 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-h4to4s-TagInputContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  background-color: #ffffff;
  padding: calc(12px - 1px) 16px;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-h4to4s-TagInputContainer:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-h4to4s-TagInputContainer[data-success='true'] {
  border-color: #22674e;
}

.css-h4to4s-TagInputContainer[data-error='true'] {
  border-color: #b3144d;
}

.css-h4to4s-TagInputContainer:hover {
  border-color: #792dd4;
}

.css-h4to4s-TagInputContainer[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.css-h4to4s-TagInputContainer[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.css-bi6n77-DataContainer {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div>
      <div
        class="css-h4to4s-TagInputContainer ea7vc6o3"
        data-disabled="true"
        data-error="false"
        data-readonly="false"
        data-success="false"
      >
        <div
          class="css-bi6n77-DataContainer ea7vc6o2"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagInput should renders correctly readOnly 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-h4to4s-TagInputContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  background-color: #ffffff;
  padding: calc(12px - 1px) 16px;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-h4to4s-TagInputContainer:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-h4to4s-TagInputContainer[data-success='true'] {
  border-color: #22674e;
}

.css-h4to4s-TagInputContainer[data-error='true'] {
  border-color: #b3144d;
}

.css-h4to4s-TagInputContainer:hover {
  border-color: #792dd4;
}

.css-h4to4s-TagInputContainer[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.css-h4to4s-TagInputContainer[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.css-bi6n77-DataContainer {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-45doph-StyledInput {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 16px;
  background: inherit;
  color: #3f4250;
  border: none;
  outline: none;
  height: 100%;
}

.css-45doph-StyledInput::-webkit-input-placeholder {
  color: #727683;
}

.css-45doph-StyledInput::-moz-placeholder {
  color: #727683;
}

.css-45doph-StyledInput:-ms-input-placeholder {
  color: #727683;
}

.css-45doph-StyledInput::placeholder {
  color: #727683;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div>
      <div
        class="css-h4to4s-TagInputContainer ea7vc6o3"
        data-disabled="false"
        data-error="false"
        data-readonly="true"
        data-success="false"
      >
        <div
          class="css-bi6n77-DataContainer ea7vc6o2"
        >
          <input
            class="css-45doph-StyledInput ea7vc6o0"
            id=":r4:"
            readonly=""
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagInput should renders correctly with error 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-h4to4s-TagInputContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  background-color: #ffffff;
  padding: calc(12px - 1px) 16px;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-h4to4s-TagInputContainer:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-h4to4s-TagInputContainer[data-success='true'] {
  border-color: #22674e;
}

.css-h4to4s-TagInputContainer[data-error='true'] {
  border-color: #b3144d;
}

.css-h4to4s-TagInputContainer:hover {
  border-color: #792dd4;
}

.css-h4to4s-TagInputContainer[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.css-h4to4s-TagInputContainer[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.css-bi6n77-DataContainer {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-45doph-StyledInput {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 16px;
  background: inherit;
  color: #3f4250;
  border: none;
  outline: none;
  height: 100%;
}

.css-45doph-StyledInput::-webkit-input-placeholder {
  color: #727683;
}

.css-45doph-StyledInput::-moz-placeholder {
  color: #727683;
}

.css-45doph-StyledInput:-ms-input-placeholder {
  color: #727683;
}

.css-45doph-StyledInput::placeholder {
  color: #727683;
}

.css-16a972i-StateContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.css-104pobb-sizeStyles {
  vertical-align: middle;
  fill: #b3144d;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-104pobb-sizeStyles .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.css-vdlwt8-StyledText {
  color: #b3144d;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div>
      <div
        class="css-h4to4s-TagInputContainer ea7vc6o3"
        data-disabled="false"
        data-error="true"
        data-readonly="false"
        data-success="false"
      >
        <div
          class="css-bi6n77-DataContainer ea7vc6o2"
        >
          <input
            class="css-45doph-StyledInput ea7vc6o0"
            id=":r6:"
            type="text"
            value=""
          />
        </div>
        <div
          class="css-16a972i-StateContainer ea7vc6o1"
        >
          <svg
            class="css-104pobb-sizeStyles e1gt4cfo0"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8.0001 2.76373C5.10813 2.76373 2.76373 5.10813 2.76373 8.0001C2.76373 10.8921 5.10813 13.2365 8.0001 13.2365C10.8921 13.2365 13.2365 10.8921 13.2365 8.0001C13.2365 5.10813 10.8921 2.76373 8.0001 2.76373ZM1.6001 8.0001C1.6001 4.46548 4.46548 1.6001 8.0001 1.6001C11.5347 1.6001 14.4001 4.46548 14.4001 8.0001C14.4001 11.5347 11.5347 14.4001 8.0001 14.4001C4.46548 14.4001 1.6001 11.5347 1.6001 8.0001ZM8.0001 5.47889C8.32143 5.47889 8.58192 5.73937 8.58192 6.0607V8.48495C8.58192 8.80628 8.32143 9.06676 8.0001 9.06676C7.67877 9.06676 7.41828 8.80628 7.41828 8.48495V6.0607C7.41828 5.73937 7.67877 5.47889 8.0001 5.47889ZM7.41828 10.4243C7.41828 10.103 7.67877 9.84252 8.0001 9.84252H8.00495C8.32628 9.84252 8.58676 10.103 8.58676 10.4243V10.4292C8.58676 10.7505 8.32628 11.011 8.00495 11.011H8.0001C7.67877 11.011 7.41828 10.7505 7.41828 10.4292V10.4243Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <span
      class="css-vdlwt8-StyledText e13y3mga0"
    >
      This is an error
    </span>
  </div>
</DocumentFragment>
`;

exports[`TagInput should renders correctly with placeholder 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-h4to4s-TagInputContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  background-color: #ffffff;
  padding: calc(12px - 1px) 16px;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-h4to4s-TagInputContainer:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-h4to4s-TagInputContainer[data-success='true'] {
  border-color: #22674e;
}

.css-h4to4s-TagInputContainer[data-error='true'] {
  border-color: #b3144d;
}

.css-h4to4s-TagInputContainer:hover {
  border-color: #792dd4;
}

.css-h4to4s-TagInputContainer[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.css-h4to4s-TagInputContainer[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.css-bi6n77-DataContainer {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-45doph-StyledInput {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 16px;
  background: inherit;
  color: #3f4250;
  border: none;
  outline: none;
  height: 100%;
}

.css-45doph-StyledInput::-webkit-input-placeholder {
  color: #727683;
}

.css-45doph-StyledInput::-moz-placeholder {
  color: #727683;
}

.css-45doph-StyledInput:-ms-input-placeholder {
  color: #727683;
}

.css-45doph-StyledInput::placeholder {
  color: #727683;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div>
      <div
        class="css-h4to4s-TagInputContainer ea7vc6o3"
        data-disabled="false"
        data-error="false"
        data-readonly="false"
        data-success="false"
      >
        <div
          class="css-bi6n77-DataContainer ea7vc6o2"
        >
          <input
            class="css-45doph-StyledInput ea7vc6o0"
            id=":rc:"
            placeholder="Enter a value here"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagInput should renders correctly with some tags 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-h4to4s-TagInputContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  background-color: #ffffff;
  padding: calc(12px - 1px) 16px;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-h4to4s-TagInputContainer:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-h4to4s-TagInputContainer[data-success='true'] {
  border-color: #22674e;
}

.css-h4to4s-TagInputContainer[data-error='true'] {
  border-color: #b3144d;
}

.css-h4to4s-TagInputContainer:hover {
  border-color: #792dd4;
}

.css-h4to4s-TagInputContainer[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.css-h4to4s-TagInputContainer[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.css-bi6n77-DataContainer {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-1anauza-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.css-1olt749-StyledText-StyledText {
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 232px;
}

.css-sitm2s-StyledGhostButton-StyledCloseButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 2px;
}

.css-sitm2s-StyledGhostButton-StyledCloseButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-sitm2s-StyledGhostButton-StyledCloseButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-sitm2s-StyledGhostButton-StyledCloseButton:hover,
.css-sitm2s-StyledGhostButton-StyledCloseButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-45doph-StyledInput {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 16px;
  background: inherit;
  color: #3f4250;
  border: none;
  outline: none;
  height: 100%;
}

.css-45doph-StyledInput::-webkit-input-placeholder {
  color: #727683;
}

.css-45doph-StyledInput::-moz-placeholder {
  color: #727683;
}

.css-45doph-StyledInput:-ms-input-placeholder {
  color: #727683;
}

.css-45doph-StyledInput::placeholder {
  color: #727683;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div>
      <div
        class="css-h4to4s-TagInputContainer ea7vc6o3"
        data-disabled="false"
        data-error="false"
        data-readonly="false"
        data-success="false"
      >
        <div
          class="css-bi6n77-DataContainer ea7vc6o2"
        >
          <span
            class="css-1anauza-StyledContainer el6733p2"
          >
            <span
              class="el6733p1 css-1olt749-StyledText-StyledText e13y3mga0"
            >
              hello
            </span>
            <button
              aria-label="Close tag"
              class="el6733p0 css-sitm2s-StyledGhostButton-StyledCloseButton e112qvla0"
              data-testid="close-tag"
              type="button"
            >
              <svg
                class="css-1d5u3w3-sizeStyles e1gt4cfo0"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.28033 4.21967C4.98744 3.92678 4.51256 3.92678 4.21967 4.21967C3.92678 4.51256 3.92678 4.98744 4.21967 5.28033L6.93934 8L4.21967 10.7197C3.92678 11.0126 3.92678 11.4874 4.21967 11.7803C4.51256 12.0732 4.98744 12.0732 5.28033 11.7803L8 9.06066L10.7197 11.7803C11.0126 12.0732 11.4874 12.0732 11.7803 11.7803C12.0732 11.4874 12.0732 11.0126 11.7803 10.7197L9.06066 8L11.7803 5.28033C12.0732 4.98744 12.0732 4.51256 11.7803 4.21967C11.4874 3.92678 11.0126 3.92678 10.7197 4.21967L8 6.93934L5.28033 4.21967Z"
                />
              </svg>
            </button>
          </span>
          <span
            class="css-1anauza-StyledContainer el6733p2"
          >
            <span
              class="el6733p1 css-1olt749-StyledText-StyledText e13y3mga0"
            >
              world
            </span>
            <button
              aria-label="Close tag"
              class="el6733p0 css-sitm2s-StyledGhostButton-StyledCloseButton e112qvla0"
              data-testid="close-tag"
              type="button"
            >
              <svg
                class="css-1d5u3w3-sizeStyles e1gt4cfo0"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.28033 4.21967C4.98744 3.92678 4.51256 3.92678 4.21967 4.21967C3.92678 4.51256 3.92678 4.98744 4.21967 5.28033L6.93934 8L4.21967 10.7197C3.92678 11.0126 3.92678 11.4874 4.21967 11.7803C4.51256 12.0732 4.98744 12.0732 5.28033 11.7803L8 9.06066L10.7197 11.7803C11.0126 12.0732 11.4874 12.0732 11.7803 11.7803C12.0732 11.4874 12.0732 11.0126 11.7803 10.7197L9.06066 8L11.7803 5.28033C12.0732 4.98744 12.0732 4.51256 11.7803 4.21967C11.4874 3.92678 11.0126 3.92678 10.7197 4.21967L8 6.93934L5.28033 4.21967Z"
                />
              </svg>
            </button>
          </span>
          <input
            aria-label="radio"
            class="css-45doph-StyledInput ea7vc6o0"
            id=":re:"
            name="radio"
            placeholder=""
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagInput should renders correctly with some tags objects 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-h4to4s-TagInputContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  background-color: #ffffff;
  padding: calc(12px - 1px) 16px;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-h4to4s-TagInputContainer:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-h4to4s-TagInputContainer[data-success='true'] {
  border-color: #22674e;
}

.css-h4to4s-TagInputContainer[data-error='true'] {
  border-color: #b3144d;
}

.css-h4to4s-TagInputContainer:hover {
  border-color: #792dd4;
}

.css-h4to4s-TagInputContainer[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.css-h4to4s-TagInputContainer[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.css-bi6n77-DataContainer {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-1anauza-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.css-1olt749-StyledText-StyledText {
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 232px;
}

.css-sitm2s-StyledGhostButton-StyledCloseButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 2px;
}

.css-sitm2s-StyledGhostButton-StyledCloseButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-sitm2s-StyledGhostButton-StyledCloseButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-sitm2s-StyledGhostButton-StyledCloseButton:hover,
.css-sitm2s-StyledGhostButton-StyledCloseButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-45doph-StyledInput {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 16px;
  background: inherit;
  color: #3f4250;
  border: none;
  outline: none;
  height: 100%;
}

.css-45doph-StyledInput::-webkit-input-placeholder {
  color: #727683;
}

.css-45doph-StyledInput::-moz-placeholder {
  color: #727683;
}

.css-45doph-StyledInput:-ms-input-placeholder {
  color: #727683;
}

.css-45doph-StyledInput::placeholder {
  color: #727683;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div>
      <div
        class="css-h4to4s-TagInputContainer ea7vc6o3"
        data-disabled="false"
        data-error="false"
        data-readonly="false"
        data-success="false"
      >
        <div
          class="css-bi6n77-DataContainer ea7vc6o2"
        >
          <span
            class="css-1anauza-StyledContainer el6733p2"
          >
            <span
              class="el6733p1 css-1olt749-StyledText-StyledText e13y3mga0"
            >
              hello
            </span>
            <button
              aria-label="Close tag"
              class="el6733p0 css-sitm2s-StyledGhostButton-StyledCloseButton e112qvla0"
              data-testid="close-tag"
              type="button"
            >
              <svg
                class="css-1d5u3w3-sizeStyles e1gt4cfo0"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.28033 4.21967C4.98744 3.92678 4.51256 3.92678 4.21967 4.21967C3.92678 4.51256 3.92678 4.98744 4.21967 5.28033L6.93934 8L4.21967 10.7197C3.92678 11.0126 3.92678 11.4874 4.21967 11.7803C4.51256 12.0732 4.98744 12.0732 5.28033 11.7803L8 9.06066L10.7197 11.7803C11.0126 12.0732 11.4874 12.0732 11.7803 11.7803C12.0732 11.4874 12.0732 11.0126 11.7803 10.7197L9.06066 8L11.7803 5.28033C12.0732 4.98744 12.0732 4.51256 11.7803 4.21967C11.4874 3.92678 11.0126 3.92678 10.7197 4.21967L8 6.93934L5.28033 4.21967Z"
                />
              </svg>
            </button>
          </span>
          <span
            class="css-1anauza-StyledContainer el6733p2"
          >
            <span
              class="el6733p1 css-1olt749-StyledText-StyledText e13y3mga0"
            >
              world
            </span>
            <button
              aria-label="Close tag"
              class="el6733p0 css-sitm2s-StyledGhostButton-StyledCloseButton e112qvla0"
              data-testid="close-tag"
              type="button"
            >
              <svg
                class="css-1d5u3w3-sizeStyles e1gt4cfo0"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.28033 4.21967C4.98744 3.92678 4.51256 3.92678 4.21967 4.21967C3.92678 4.51256 3.92678 4.98744 4.21967 5.28033L6.93934 8L4.21967 10.7197C3.92678 11.0126 3.92678 11.4874 4.21967 11.7803C4.51256 12.0732 4.98744 12.0732 5.28033 11.7803L8 9.06066L10.7197 11.7803C11.0126 12.0732 11.4874 12.0732 11.7803 11.7803C12.0732 11.4874 12.0732 11.0126 11.7803 10.7197L9.06066 8L11.7803 5.28033C12.0732 4.98744 12.0732 4.51256 11.7803 4.21967C11.4874 3.92678 11.0126 3.92678 10.7197 4.21967L8 6.93934L5.28033 4.21967Z"
                />
              </svg>
            </button>
          </span>
          <input
            aria-label="radio"
            class="css-45doph-StyledInput ea7vc6o0"
            id=":rk:"
            name="radio"
            placeholder=""
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagInput should renders correctly with success 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-h4to4s-TagInputContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  background-color: #ffffff;
  padding: calc(12px - 1px) 16px;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-h4to4s-TagInputContainer:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-h4to4s-TagInputContainer[data-success='true'] {
  border-color: #22674e;
}

.css-h4to4s-TagInputContainer[data-error='true'] {
  border-color: #b3144d;
}

.css-h4to4s-TagInputContainer:hover {
  border-color: #792dd4;
}

.css-h4to4s-TagInputContainer[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.css-h4to4s-TagInputContainer[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.css-bi6n77-DataContainer {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-45doph-StyledInput {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 16px;
  background: inherit;
  color: #3f4250;
  border: none;
  outline: none;
  height: 100%;
}

.css-45doph-StyledInput::-webkit-input-placeholder {
  color: #727683;
}

.css-45doph-StyledInput::-moz-placeholder {
  color: #727683;
}

.css-45doph-StyledInput:-ms-input-placeholder {
  color: #727683;
}

.css-45doph-StyledInput::placeholder {
  color: #727683;
}

.css-16a972i-StateContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.css-m1zjrh-sizeStyles {
  vertical-align: middle;
  fill: #22674e;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-m1zjrh-sizeStyles .fillStroke {
  stroke: #22674e;
  fill: none;
}

.css-1n7fwv3-StyledText {
  color: #22674e;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div>
      <div
        class="css-h4to4s-TagInputContainer ea7vc6o3"
        data-disabled="false"
        data-error="false"
        data-readonly="false"
        data-success="true"
      >
        <div
          class="css-bi6n77-DataContainer ea7vc6o2"
        >
          <input
            class="css-45doph-StyledInput ea7vc6o0"
            id=":r9:"
            type="text"
            value=""
          />
        </div>
        <div
          class="css-16a972i-StateContainer ea7vc6o1"
        >
          <svg
            class="css-m1zjrh-sizeStyles e1gt4cfo0"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8.0001 2.76373C5.10813 2.76373 2.76373 5.10813 2.76373 8.0001C2.76373 10.8921 5.10813 13.2365 8.0001 13.2365C10.8921 13.2365 13.2365 10.8921 13.2365 8.0001C13.2365 5.10813 10.8921 2.76373 8.0001 2.76373ZM1.6001 8.0001C1.6001 4.46548 4.46548 1.6001 8.0001 1.6001C11.5347 1.6001 14.4001 4.46548 14.4001 8.0001C14.4001 11.5347 11.5347 14.4001 8.0001 14.4001C4.46548 14.4001 1.6001 11.5347 1.6001 8.0001ZM10.2777 6.07211C10.5391 6.25888 10.5997 6.62225 10.4129 6.88373L7.98869 10.2777C7.88929 10.4168 7.73368 10.5052 7.56324 10.5193C7.39279 10.5334 7.22478 10.4718 7.10384 10.3509L5.6493 8.89635C5.42208 8.66914 5.42208 8.30075 5.6493 8.07354C5.87651 7.84632 6.2449 7.84632 6.47211 8.07354L7.44101 9.04243L9.46605 6.20738C9.65282 5.9459 10.0162 5.88534 10.2777 6.07211Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <span
      class="css-1n7fwv3-StyledText e13y3mga0"
    >
      This is a success
    </span>
  </div>
</DocumentFragment>
`;
